--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,19 +1,19 @@
-.card {
-	width: 100%;
+.cards {
+	max-width: 35rem;
 	height: 27.9rem;
 	padding: 10rem 2.4rem;
+	margin-bottom: 2.4rem;
 
 	border-radius: 32px;
-	background-color: var(--pink-100);
 }
 
-.card h1,
-.card p,
-.card a {
+.cards h1,
+.cards p,
+.cards a {
 	color: var(--white);
 }
 
-.card h1 {
+.cards h1 {
 	font-family: "Montserrat", sans-serif;
 	font-size: 2.4rem;
 	font-style: normal;
@@ -23,7 +23,7 @@
 	margin-bottom: 1rem;
 }
 
-.card p {
+.cards p {
 	font-weight: 400;
 
 	margin-bottom: 2.4rem;
@@ -41,4 +41,11 @@
 
 .links a {
 	font-weight: 300;
+}
+
+@media (min-width: 768px) {
+	.cards {
+		display: flex;
+		flex-wrap: wrap;
+	}
 }
