--- a/src/global.css
+++ b/src/global.css
@@ -16,6 +16,11 @@
 	font-size: 62.5%;
 }
 
+:focus {
+	outline: transparent;
+	box-shadow: 0 0 0 2px var(--pink-200);
+}
+
 * {
 	margin: 0;
 	padding: 0;
