--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .cards {
-	max-width: 35rem;
+	max-width: 32rem;
 	height: 27.9rem;
-	padding: 10rem 2.4rem;
+	padding: 5rem 2.4rem;
 	margin-bottom: 2.4rem;
 
 	border-radius: 32px;
@@ -19,8 +19,7 @@
 	font-style: normal;
 	font-weight: 700;
 	line-height: normal;
-
-	margin-bottom: 1rem;
+	margin-bottom: 1.6rem;
 }
 
 .cards p {
@@ -36,7 +35,7 @@
 
 .links li {
 	display: inline-block;
-	margin-right: 1rem;
+	margin-right: 0.5rem;
 }
 
 .links a {
@@ -47,9 +46,16 @@
 	.cards {
 		display: flex;
 		flex-wrap: wrap;
+		justify-content: space-between;
 	}
 
 	.links a:hover {
 		font-weight: bold;
+	}
+}
+
+@media (min-width: 1024px) {
+	.cards {
+		max-width: 35rem;
 	}
 }
