--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,10 +4,10 @@
 	justify-content: space-between;
 	align-items: center;
 
-	padding: 3rem 2rem;
+	padding: 3.2rem;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
 	.header {
 		padding: 5.4rem;
 	}
