--- a/src/global.css
+++ b/src/global.css
@@ -27,6 +27,17 @@
 	box-sizing: border-box;
 }
 
+html,
+body {
+	height: 100%;
+}
+
+#root {
+	min-height: 100%;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+}
+
 body {
 	background: var(--white);
 	color: var(--gray-200);
@@ -48,4 +59,26 @@ a,
 button {
 	-webkit-tap-highlight-color: transparent;
 	tap-highlight-color: transparent;
+}
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px var(--pink-100);
+	border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: var(--pink-100);
+	border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: var(--pink-200);
 }
