--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,15 @@
 .footer {
 	background-color: var(--pink-200);
-	padding: 3.2rem;
+	padding: 2rem;
 	text-align: center;
 	color: var(--white);
 
 	width: 100%;
 }
+
+/* @media (min-width: 1024px) {
+	.footer {
+		position: fixed;
+		bottom: 0;
+	}
+} */
