added highlight when the menu link is on the page

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -82,6 +82,10 @@
 	text-decoration: underline;
 }
 
+.navigationMenu ul li a.active {
+	color: var(--pink-200);
+}
+
 @media (min-width: 768px) {
 	.burguerIcon {
 		display: none;
