--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,8 +1,9 @@
 .card {
-	max-width: 32rem;
-	height: 27.9rem;
-	padding: 5rem 2.4rem;
+	max-width: 35rem;
+	height: 40rem;
+	padding: 4rem 2.4rem;
 	margin-bottom: 2.4rem;
+	overflow: hidden;
 
 	border-radius: 32px;
 
