modifications: modified the links on projects to buttons made the footer smaller modified max size of the layout fix on navbar

--- a/src/global.css
+++ b/src/global.css
@@ -58,7 +58,7 @@ button {
 a,
 button {
 	-webkit-tap-highlight-color: transparent;
-	tap-highlight-color: transparent;
+	-tap-highlight-color: transparent;
 }
 
 /* width */
