--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -10,6 +10,10 @@
 	text-align: left;
 }
 
+.card img {
+	border-radius: 5px;
+}
+
 .card h1,
 .card p,
 .card a {
@@ -31,29 +35,41 @@
 	margin-bottom: 2.4rem;
 }
 
-.links ul {
-	list-style-type: disc;
-	color: var(--white);
+.links {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 10px;
 }
 
-.links li {
-	display: inline-block;
-	margin-right: 0.5rem;
+.links button {
+	background-color: transparent;
+	padding: 1rem;
+	border-radius: 5px;
+	border: 1px solid var(--white);
+	cursor: pointer;
+
+	flex: 1;
 }
 
-.links a {
-	font-weight: 300;
+.links button a {
+	text-decoration: none;
 }
 
 @media (min-width: 768px) {
 	.card {
 		display: flex;
-		flex-wrap: wrap;
+		flex-direction: column;
 		justify-content: space-between;
 	}
 
-	.links a:hover {
-		font-weight: bold;
+	.links {
+		flex-direction: row;
+	}
+
+	.links button:hover {
+		border: 2px solid var(--white);
 	}
 }
 
