--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
 	max-width: 35rem;
 	height: 40rem;
-	padding: 4rem 2.4rem;
+	padding: 2rem;
 	margin-bottom: 2.4rem;
 	overflow: hidden;
 
@@ -39,7 +39,7 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	gap: 10px;
 }
 
@@ -70,11 +70,5 @@
 
 	.links button:hover {
 		border: 2px solid var(--white);
-	}
-}
-
-@media (min-width: 1024px) {
-	.card {
-		max-width: 35rem;
 	}
 }
