--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -8,7 +8,7 @@
 	width: 35rem;
 }
 
-.heroInfo h1 {
+.heroInfo span {
 	color: var(--blue-200);
 	font-family: "Montserrat", sans-serif;
 	font-size: 3.2rem;
@@ -16,6 +16,7 @@
 	font-weight: 700;
 	line-height: normal;
 
+	display: inline-block;
 	margin-bottom: 2.4rem;
 }
 
@@ -26,15 +27,20 @@
 	font-size: 1.6rem;
 }
 
+.buttons {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	margin: 3.2rem 0;
+}
+
 .button {
 	background-color: var(--pink-200);
 	padding: 1.2rem 3.2rem;
 	border-radius: 32px;
 	display: inline-block;
-
-	margin: 3.6rem 0;
-
 	cursor: pointer;
+	text-align: center;
 }
 
 .button:hover,
@@ -65,6 +71,14 @@
 
 	.heroInfo {
 		padding-top: 70px;
+	}
+
+	.buttons {
+		flex-direction: row;
+	}
+
+	.button {
+		flex: 1;
 	}
 }
 
