fix card's size fix button to have all the area clickable added skills component and added style

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -38,9 +38,11 @@
 	background-color: var(--pink-200);
 	padding: 1.2rem 3.2rem;
 	border-radius: 32px;
-	display: inline-block;
+	display: inline;
 	cursor: pointer;
 	text-align: center;
+	text-decoration: none;
+	color: var(--white);
 }
 
 .button:hover,
