--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,12 +1,11 @@
 .card {
 	max-width: 35rem;
-	height: 40rem;
+	/* height: 40rem; */
 	padding: 2rem;
 	margin-bottom: 2.4rem;
 	overflow: hidden;
 
 	border-radius: 32px;
-
 	text-align: left;
 }
 
@@ -43,9 +42,11 @@
 	gap: 10px;
 }
 
-.links button {
+.button {
 	background-color: transparent;
 	padding: 1rem;
+	text-decoration: none;
+	text-align: center;
 	border-radius: 5px;
 	border: 1px solid var(--white);
 	transition: outline-width 0.3s ease;
@@ -54,7 +55,7 @@
 	flex: 1;
 }
 
-.links button a {
+.button a {
 	text-decoration: none;
 }
 
@@ -71,7 +72,7 @@
 		flex-direction: row;
 	}
 
-	.links button:hover {
+	.button:hover {
 		outline: 1px solid var(--white);
 	}
 }
