--- a/src/pages/Skills/Skills.module.css
+++ b/src/pages/Skills/Skills.module.css
@@ -2,6 +2,10 @@ h3 {
 	font-weight: normal;
 }
 
+.iconsContainer {
+	margin-top: 2rem;
+}
+
 .iconsContainer img {
 	width: 6rem;
 	margin-right: 2rem;
