Changed img to the public file Added SEO config to the index page Removed a tab from the nav bar Changed CV Changed highlight text color

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -27,6 +27,10 @@
 	font-size: 1.6rem;
 }
 
+.heroInfo .highlight {
+	color: var(--pink-200);
+}
+
 .buttons {
 	display: flex;
 	flex-direction: column;
